Fix spacing between the coin-filter-buttons and the page

--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -15,3 +15,4 @@ $white: #ffffff;
 $marketcap-price: #a5a5a5;
 $body-text: #585858;
 $post-navigation-date: #b7b7b7;
+$coinlist-filter-spacing: 4px;
